Fix spacing on expanded overview

--- a/frontend/src/style/overview.scss
+++ b/frontend/src/style/overview.scss
@@ -105,6 +105,12 @@
     font-weight: bold;
 }
 
+.expanded-team-overview-stats {
+    margin: 0;
+    display: flex;
+    flex-flow: column wrap;
+}
+
 .expanded-team-overview-players {
     width: 100%;
     max-height: 200px;
